update pom